# hackweek-rust-gui

./: Cargo.toml  README.md
demo/: 4852baed-b317-47ca-c867-84b97a0db31f.envelope  README.md  config.json
resources/en-US/: crashreporter.ftl
resources/l18n/de-DE/: crashreporter.ftl  sentry_sixty.ftl
resources/l18n/en-US/: crashreporter.ftl  sentry_sixty.ftl
sentry-druid/: Cargo.toml  README.md
sentry-druid/src/: actions.rs  main.rs  state.rs  theme.rs
sentry-druid/src/layout/: body.rs  footer.rs  header.rs  mod.rs
sentry-iced/: Cargo.toml  README.md
sentry-iced/src/: main.rs
sentry-sixty/: Cargo.toml  README.md  build.rs  i18n.toml
sentry-sixty/src/: config.rs  localizations.rs  main.rs  translations.rs  ui.rs
sentry-sixty/ui/: body.60  footer.60  header.60  main.60  theme.60  widgets.60
sentry-uploader/: Cargo.toml
sentry-uploader/src/: envelope.rs  lib.rs  uploader.rs
