[package]
name = "sentry-sixty"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
sixtyfps = "0.1.0"
unic-langid = { version = "0.9", features = ["macros"] }
fluent = "0.16"
fluent-langneg = "0.13"
intl-memoizer = "0.5.1"
druid-shell = "0.7"

[build-dependencies]
sixtyfps-build = "0.1.0"
