[package]
name = "sentry-sixty"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
sixtyfps = "0.1.0"
unic-langid = { version = "0.9", features = ["macros"] }
rust-embed = "5"
i18n-embed = { version = "0.12.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sentry-core = "0.23"
sentry-uploader = { path = "../sentry-uploader" }
tokio = { version = "1.9", features = ["rt"] }
anyhow = "1.0.42"

[build-dependencies]
sixtyfps-build = "0.1.0"
